--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="wrapper">
         <div class="navbar container">
             <div class="logo">
-                <img src="log.png" alt="">
+                <img src="images/log.png" alt="">
             </div>
             <div class="list">
                 <ul>
@@ -40,7 +40,7 @@
         <section id="hero">
             <div class="main-hero">
                 <div class="hero-img">
-                    <img src="man.webp" alt="">
+                    <img src="images/man.webp" alt="">
                     <div class="image-back"></div>
                 </div>
                 <div class="hero-text">
@@ -53,7 +53,7 @@
                         <a href="#contact">
                             <button class="get-in-touch">Get In Touch</button>
                         </a>
-                        <a href="Navy Blue Minimalist Professional Simple CV Resume (2).pdf" target="_blank">
+                        <a href="images/kuljitCV.pdf" target="_blank">
                             <button class="download-cv">Download CV</button>
                         </a>
                     </div>
@@ -113,16 +113,16 @@
             <p> Technologies I’ve been working with recently</p>
             <div class="skill-card">
                 <div class="row">
-                    <img src="html.png" alt="">
-                    <img src="css.png" alt="">
-                    <img src="js.svg" alt="">
-                    <img src="bootstrap.png" alt="">
-                    <img src="visual-studio-code-icon.webp" alt="">
-                    <img src="React-logo.png" alt="">
-                    <img src="redux.png" alt="">
-                    <img src="threejs.png" alt="">
-                    <img src="gsap.png" alt="">
-                    <img src="github.png" alt="">
+                    <img src="images/html.png" alt="">
+                    <img src="images/css.png" alt="">
+                    <img src="images/js.svg" alt="">
+                    <img src="images/bootstrap.png" alt="">
+                    <img src="images/visual-studio-code-icon.webp" alt="">
+                    <img src="images/React-logo.png" alt="">
+                    <img src="images/redux.png" alt="">
+                    <img src="images/threejs.png" alt="">
+                    <img src="images/gsap.png" alt="">
+                    <img src="images/github.png" alt="">
                 </div>
             </div>
         </section>
@@ -137,14 +137,14 @@
                 </div>
                 <div class="card-project-img one">
                     <a href="http://ytasker.com/" target="_blank">
-                        <img src="project3.jpeg" alt="">
+                        <img src="images/project3.jpeg" alt="">
                     </a>
                 </div>
             </div>
             <div class="card car">
                 <div class="card-project-img two">
                     <a href="https://kuljitportfolio.000webhostapp.com/" target="_blank">
-                        <img src="project2.jpeg" alt="">
+                        <img src="images/project2.jpeg" alt="">
                     </a>
                 </div>
                 <div class="card-text two">
