--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Kuljit Singh Dhaliwal</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
+    <div class="loading">
+        <img src="images/loading.webp" alt="">
+    </div>
     <div class="wrapper">
         <div class="navbar container">
             <div class="logo">
@@ -166,24 +170,26 @@
                 <a href="tel:+91-88473-89488"><i class="fa-solid fa-phone"></i> +91-88473-89488</a>
             </h4>
             <div class="social">
-                <a href="https://www.instagram.com/kuljitdhaliwal007/">
+                <a href="https://www.instagram.com/kuljitdhaliwal007/" target="_blank">
                     <i class="fa-brands fa-instagram"></i>
                 </a>
-                <a href="https://www.linkedin.com/in/kuljit-singh-dhaliwal-391b15210/">
+                <a href="https://www.linkedin.com/in/kuljit-singh-dhaliwal-391b15210/" target="_blank">
                     <i class="fa-brands fa-linkedin"></i>
                 </a>
-                <a href="https://github.com/KuljitDhaliwal">
+                <a href="https://github.com/KuljitDhaliwal" target="_blank">
                     <i class="fa-brands fa-github"></i>
                 </a>
             </div>
         </section>
     </div>
     <script>
+        window.addEventListener("load", () => {
+            document.querySelector(".loading").style.display = "none";
+        })
         const toggle = document.querySelector('.toggle');
         toggle.addEventListener('click', () => {
             document.querySelector('.bar').classList.toggle('clicked')
             document.querySelector('.navbar').classList.toggle('clicked')
-
         })
     </script>
 </body>
