--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <a href="#contact">
                             <button class="get-in-touch">Get In Touch</button>
                         </a>
-                        <a href="images/kuljitCV.pdf" target="_blank">
+                        <a href="images/Kuljit Singh Dhaliwal (1).pdf" target="_blank">
                             <button class="download-cv">Download CV</button>
                         </a>
                     </div>
@@ -86,10 +86,10 @@
                             <h1 class="virtual">Virtual Assistant at Yirtual.</h1>
                         </div>
                         <div class="year">
-                            <p><small>Sept. 2018 to 2022</small></p>
+                            <p><small>Sept. 2018 to 2023</small></p>
                         </div>
                     </div>
-                    <p>I worked as VA for 3 Years. I assist Business Owners, Coaches and Entrepreneur to build, launch
+                    <p>I worked as VA for 4 Years. I assist Business Owners, Coaches and Entrepreneur to build, launch
                         and grow their businesses by helping them with Data Management, Web Scraping, Data Analysis etc.
                     </p>
                 </div>
@@ -102,7 +102,7 @@
                             <h1 class="virtual">Web Developer at YTASKER.</h1>
                         </div>
                         <div class="year">
-                            <p><small>Feb. 2022 to till</small></p>
+                            <p><small>Jan. 2023 to Present</small></p>
                         </div>
                     </div>
                     <p>I have been working as Web Developer for more than one year. I have developer several web
